--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.3.0",
     "mongoose": "^6.0.14",
     "nodemon": "^2.0.15"
   }
